_forms.css.scss
.form-list {
  padding: 0;
  margin: 0;
  list-style: none;

  & > li {
    @extend %margin-bottom-small;
    position: relative;
    padding-left: 0;

    &:before { content: "" }
  }

  label {
    @include transition(color .2s);
    display: block;
    margin-bottom: 1px;
    font: {
      size: em(10, 14);
      weight: 400;
    };
    text-transform: uppercase;
    color: $colorDarkGrey;
  }

  .checkboxes input {
    // display: inline-block;
    float: left;
    margin-right: .5em;
    margin-top: .15em;
  }

  .active label { color: $colorCorpHighlight }

  textarea,
  input {
    outline: none;
  }

  input[type="text"],
  input[type="email"],
  input[type="password"] {
    @include transition (border-color .2s);

    @include placeholder { color: $colorLightGrey }

    width: 100%;
    border: 1px solid;
    border-color: $colorLightGrey;
    border-radius: $layoutCornerRadius;
    padding: 0.8em 1em;
    font: {
      size: em(16, 14);
      weight: 400;
      family: $fontFamilyBody;
    };
    -webkit-appearance: none;

    &:focus,
    &:hover {
      border-color: $colorCorpHighlight;
    }
  }
}

.button-set {
  @include clearfix;
  margin-top: em(30);

  p {
    // @include span-columns(5 of 9);
    margin-top: 0;
  }

  &.right .button {
    float: right;
    margin-left: em(20)
  }
}

//-------------------------------------
// Parsley Errors
//-------------------------------------

input[type="text"],
input[type="email"],
input[type="password"],
select {
  &.parsley-success { border-color: $colorSuccess }

  &.parsley-error { border-color: $colorError }
}

.parsley-error-list {
  @extend .unstyled;
  font-size: em(12);

  li {
    @include border-bottom-radius($layoutCornerRadius);
    position: relative;
    top: -1px;
    line-height: 1;
    border-left: 1px solid $colorError;
    border-bottom: 1px solid $colorError;
    border-right: 1px solid $colorError;
    background: lighten($colorError, 20%);
    color: $colorOffWhite;
    padding: 0.3125em !important;
  }
}

  .detach {
    // @extend this to .parsley-error-list when validating checkboxes and radio buttons
    li {
      @extend %margin-bottom-medium;
      @extend %margin-top-small;
      @include border-top-radius($layoutCornerRadius);
      border-top: 1px solid $colorError;
    }
  }

//-------------------------------------
// Custom radio buttons & checkboxes
// Note: Wrap inputs and labels in .custom
//-------------------------------------

.custom {

  label {
    display: inline-block;
    cursor: pointer;
    position: relative;
    padding-left: 25px;
    margin-right: 15px;

    &:before {
      content: "";
      display: inline-block;
      width: 18px;
      height: 18px;
      margin-right: 10px;
      position: absolute;
      left: 0;
      background: $colorCorpHighlightLighter;
    }
  }

  input[type="radio"], input[type="checkbox"] { display: none; }

  input[type="radio"] + label:before { border-radius: 9px; }

  input[type="checkbox"] + label:before { border-radius: 3px; }

  /* Ticked */
  input:checked + label:after {
    content: "";
    display: inline-block;
    width: 8px;
    height: 8px;
    position: absolute;
    left: 5px;
    bottom: 9px;
    background: white;
  }

  input[type="radio"]:checked + label:after { border-radius: 4px; }

  input[type="checkbox"]:checked + label:after { border-radius: 2px; }

  &.disabled {
    label {
      color: lighten($colorMediumGrey, 25%);

      &:before {
        background: lighten($colorMediumGrey, 25%);
      }
    }
  }

}

